[package]
name = "cipher_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["ciphers", "algorithms", "ceasar_cipher"]
categories = ["command-line-utilities", "algorithms"]
readme = "README.md"
repository = "https://github.com/gavin-noktes/cipher-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
inquire = "0.2.1"
terminal-fonts = "0.1.0"
